--- a/package.json
+++ b/package.json
@@ -3,21 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:path": "pathpida --enableStatic --ignorePath .gitignore --watch",
+    "build": "pathpida --enableStatic --ignorePath .gitignore && next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint --ext .js,.ts,.jsx,.tsx . --ignore-path .gitignore --max-warnings 0",
+    "lint:prettier": "prettier --check . --ignore-path .gitignore",
+    "format": "run-s format:eslint format:prettier",
+    "format:eslint": "yarn lint:eslint --fix",
+    "format:prettier": "yarn lint:prettier --write",
+    "typecheck": "tsc --pretty --noEmit",
+    "generate:page": "scaffdog generate page"
   },
   "dependencies": {
-    "next": "12.1.0",
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
+    "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
+    "@types/node": "17.0.17",
     "@types/react": "17.0.39",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "pathpida": "^0.17.0",
+    "prettier": "^2.5.1",
+    "scaffdog": "^1.2.0",
     "typescript": "4.5.5"
   }
 }
