--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "generate:page": "scaffdog generate page"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
