--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^6",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
