--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format:eslint": "yarn lint:eslint --fix",
     "format:prettier": "yarn lint:prettier --write",
     "typecheck": "tsc --pretty --noEmit",
-    "generate:page": "scaffdog generate page"
+    "generate:page": "scaffdog generate page",
+    "gen:theme-typings": "chakra-cli tokens /src/lib/chakra/theme.ts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
@@ -30,6 +31,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^1.9.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
