--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/recoil": "^0.0.9",
     "framer-motion": "^6",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.9.0",
