--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.9.0",
