--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/recoil": "^0.0.9",
     "framer-motion": "^6",
     "next": "12.1.0",
+    "next-seo": "^5.15.0",
     "react": "17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "17.0.2",
