--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@chakra-ui/cli": "^1.9.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-scroll": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "8.9.0",
@@ -49,6 +50,7 @@
     "npm-run-all": "^4.1.5",
     "pathpida": "^0.17.0",
     "prettier": "^2.5.1",
+    "react-scroll": "^1.8.9",
     "scaffdog": "^1.2.0",
     "typescript": "4.5.5"
   }
