--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@chakra-ui/cli": "^1.9.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "8.9.0",
