--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "pathpida": "^0.17.0",
     "prettier": "^2.5.1",
     "typescript": "4.5.5"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
