--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Noto", "pathpida", "shinkyu", "typecheck"]
+  "cSpell.words": ["Noto", "pathpida", "shinkyu", "typecheck"],
+  "editor.defaultFormatter": "esbenp.prettier-vscode", // フォーマッターをPrettierにする
+  "editor.formatOnSave": true, // ファイル保存時にフォーマットを実行
+  "[markdown]": {
+    // markdownのフォーマットを無効化
+    "editor.formatOnSave": false
+  }
 }
