--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "[markdown]": {
     // markdownのフォーマットを無効化
     "editor.formatOnSave": false
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
