--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^6",
     "next": "12.1.0",
     "next-seo": "^5.15.0",
+    "next-sitemap": "^4.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
