--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.9.0",
+    "@types/gtag.js": "^0.0.19",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "@types/react-scroll": "^1.8.7",
