--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.3",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^6",
-    "next": "12.1.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "framer-motion": "^11.2.3",
+    "next": "^14.2.3",
     "next-seo": "^5.15.0",
     "next-sitemap": "^4.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.9",
     "swiper": "^8.4.5"
