--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "run-p dev:*",
     "dev:next": "next dev",
-    "dev:path": "pathpida --enableStatic --ignorePath .gitignore --watch",
-    "build": "pathpida --enableStatic --ignorePath .gitignore && next build && next export",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint --ext .js,.ts,.jsx,.tsx . --ignore-path .gitignore --max-warnings 0",
@@ -49,7 +48,6 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "npm-run-all": "^4.1.5",
-    "pathpida": "^0.17.0",
     "prettier": "^2.5.1",
     "typescript": "4.5.5"
   },
