--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "next": "^14.2.3",
     "next-seo": "^5.15.0",
     "next-sitemap": "^4.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.9",
     "swiper": "^8.4.5"
@@ -35,9 +35,9 @@
   "devDependencies": {
     "@chakra-ui/cli": "^1.9.0",
     "@types/gtag.js": "^0.0.19",
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
-    "@types/react-scroll": "^1.8.7",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "8.9.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "typescript": "4.5.5"
+    "typescript": "^4.9.5"
   },
   "volta": {
     "node": "18.17.1"
