--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@next/third-parties": "^14.2.3",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^11.2.3",
     "next": "^14.2.3",
